// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Page Clicking portfolio switch shows empty portfolio 1`] = `
<div>
  <div
    class="MuiContainer-root-11 makeStyles-landingContainer-1 MuiContainer-maxWidthLg-17"
  >
    <div
      class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42 MuiGrid-justify-xs-center-37"
    >
      <div
        class="MuiGrid-root-19 makeStyles-headerContainer-2 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="makeStyles-headerContainer-123"
        >
          <div
            class="makeStyles-headerContent-124"
          >
            <h2
              class="MuiTypography-root-125 MuiTypography-h2-131 MuiTypography-colorTextPrimary-150"
            >
              Sett Vaults
            </h2>
            <h6
              class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextSecondary-151"
            >
              Powerful Bitcoin strategies. Automatic staking rewards.
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-122"
          >
            <div
              class="MuiInputBase-root-182 MuiOutlinedInput-root-167 MuiInputBase-colorSecondary-191 MuiOutlinedInput-colorSecondary-168 makeStyles-gasSelector-155 MuiInputBase-adornedStart-186 MuiOutlinedInput-adornedStart-171"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177 MuiInputBase-inputAdornedStart-197 MuiOutlinedInput-inputAdornedStart-180"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-166"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-214"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-contained-229 makeStyles-walletButton-220 MuiButton-containedSecondary-231 MuiButton-disableElevation-232"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-222"
              >
                0x47b77...16f3564
                <span
                  class="MuiButton-endIcon-246 MuiButton-iconSizeMedium-248"
                >
                  <div
                    class="makeStyles-walletDot-217 makeStyles-greenDot-219"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-356"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 makeStyles-widgetContainer-5 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-254 makeStyles-walletSlider-253"
          >
            <span
              class="MuiSwitch-root-260"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-250 MuiIconButton-root-276 PrivateSwitchBase-root-272 MuiSwitch-switchBase-263 MuiSwitch-colorPrimary-264 PrivateSwitchBase-checked-273 MuiSwitch-checked-267"
              >
                <span
                  class="MuiIconButton-label-284"
                >
                  <input
                    class="PrivateSwitchBase-input-275 MuiSwitch-input-269"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb-270"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-356"
                />
              </span>
              <span
                class="MuiSwitch-track-271"
              />
            </span>
            <span
              class="MuiTypography-root-125 MuiFormControlLabel-label-259 MuiTypography-body1-127"
            >
              Portfolio View
            </span>
          </label>
        </div>
        <div
          class="makeStyles-pickerContainer-9"
        >
           
          <div
            class="MuiInputBase-root-182 MuiOutlinedInput-root-167 makeStyles-samplePicker-285"
            style="margin-top: auto; margin-bottom: auto;"
            title="ROI combines the appreciation of the vault with its $BADGER or $DIGG emissions. All numbers are an approximation based on historical data."
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177"
              role="button"
              tabindex="0"
            >
              YEAR
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-166"
              tabindex="-1"
              value="year"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-214"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            class="MuiInputBase-root-182 MuiOutlinedInput-root-167 makeStyles-currencyPicker-297"
            style="margin-top: auto; margin-bottom: auto;"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177"
              role="button"
              tabindex="0"
            >
              USD
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-166"
              tabindex="-1"
              value="usd"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-214"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-md-4-85"
      >
        <div
          class="MuiPaper-root-299 makeStyles-infoPaper-298 MuiPaper-elevation2-304 MuiPaper-rounded-300"
        >
          <h6
            class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextPrimary-150"
          >
            Total Value Locked
          </h6>
          <span
            class="MuiSkeleton-root-327 MuiSkeleton-text-328 MuiSkeleton-withChildren-335 MuiSkeleton-fitContent-336 MuiSkeleton-heightAuto-337 MuiSkeleton-wave-333"
          >
            <h5
              class="MuiTypography-root-125 MuiTypography-h5-134"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-md-4-85"
      >
        <div
          class="MuiPaper-root-299 makeStyles-infoPaper-298 MuiPaper-elevation2-304 MuiPaper-rounded-300"
        >
          <h6
            class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextPrimary-150"
          >
            Your Portfolio
          </h6>
          <span
            class="MuiSkeleton-root-327 MuiSkeleton-text-328 MuiSkeleton-withChildren-335 MuiSkeleton-fitContent-336 MuiSkeleton-heightAuto-337 MuiSkeleton-wave-333"
          >
            <h5
              class="MuiTypography-root-125 MuiTypography-h5-134"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-md-4-85"
      >
        <div
          class="MuiPaper-root-299 makeStyles-infoPaper-298 MuiPaper-elevation2-304 MuiPaper-rounded-300"
        >
          <h6
            class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextPrimary-150"
          >
            Badger Price
          </h6>
          <span
            class="MuiSkeleton-root-327 MuiSkeleton-text-328 MuiSkeleton-withChildren-335 MuiSkeleton-fitContent-336 MuiSkeleton-heightAuto-337 MuiSkeleton-wave-333"
          >
            <h5
              class="MuiTypography-root-125 MuiTypography-h5-134"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42 MuiGrid-justify-xs-center-37"
    >
      <button
        class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-outlined-226 makeStyles-announcementButton-10 MuiButton-outlinedPrimary-227 MuiButton-outlinedSizeSmall-238 MuiButton-sizeSmall-242"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-222"
        >
          Note: New Vaults may take up to 2 weeks from launch to reach full efficiency.
        </span>
        <span
          class="MuiTouchRipple-root-356"
        />
      </button>
    </div>
    <div
      class="makeStyles-settListContainer-338"
    >
      <div
        class="makeStyles-loaderContainer-339"
      >
        <div
          class="MuiCircularProgress-root-341 MuiCircularProgress-colorPrimary-345 MuiCircularProgress-indeterminate-343"
          role="progressbar"
          style="width: 60px; height: 60px;"
        >
          <svg
            class="MuiCircularProgress-svg-347"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-348 MuiCircularProgress-circleIndeterminate-350"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
        <p
          class="MuiTypography-root-125 makeStyles-loaderMessage-340 MuiTypography-body1-127"
        >
          Loading Ethereum Setts...
        </p>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Landing Page Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-11 makeStyles-landingContainer-1 MuiContainer-maxWidthLg-17"
  >
    <div
      class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42 MuiGrid-justify-xs-center-37"
    >
      <div
        class="MuiGrid-root-19 makeStyles-headerContainer-2 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="makeStyles-headerContainer-123"
        >
          <div
            class="makeStyles-headerContent-124"
          >
            <h2
              class="MuiTypography-root-125 MuiTypography-h2-131 MuiTypography-colorTextPrimary-150"
            >
              Sett Vaults
            </h2>
            <h6
              class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextSecondary-151"
            >
              Powerful Bitcoin strategies. Automatic staking rewards.
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-122"
          >
            <div
              class="MuiInputBase-root-182 MuiOutlinedInput-root-167 MuiInputBase-colorSecondary-191 MuiOutlinedInput-colorSecondary-168 makeStyles-gasSelector-155 MuiInputBase-adornedStart-186 MuiOutlinedInput-adornedStart-171"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177 MuiInputBase-inputAdornedStart-197 MuiOutlinedInput-inputAdornedStart-180"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-166"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-214"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-contained-229 makeStyles-walletButton-220 MuiButton-containedSecondary-231 MuiButton-disableElevation-232"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-222"
              >
                0x47b77...16f3564
                <span
                  class="MuiButton-endIcon-246 MuiButton-iconSizeMedium-248"
                >
                  <div
                    class="makeStyles-walletDot-217 makeStyles-greenDot-219"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-356"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 makeStyles-widgetContainer-5 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div>
          <label
            class="MuiFormControlLabel-root-254 makeStyles-walletSlider-253"
          >
            <span
              class="MuiSwitch-root-260"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-250 MuiIconButton-root-276 PrivateSwitchBase-root-272 MuiSwitch-switchBase-263 MuiSwitch-colorPrimary-264"
              >
                <span
                  class="MuiIconButton-label-284"
                >
                  <input
                    class="PrivateSwitchBase-input-275 MuiSwitch-input-269"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb-270"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-356"
                />
              </span>
              <span
                class="MuiSwitch-track-271"
              />
            </span>
            <span
              class="MuiTypography-root-125 MuiFormControlLabel-label-259 MuiTypography-body1-127"
            >
              Portfolio View
            </span>
          </label>
        </div>
        <div
          class="makeStyles-pickerContainer-9"
        >
           
          <div
            class="MuiInputBase-root-182 MuiOutlinedInput-root-167 makeStyles-samplePicker-285"
            style="margin-top: auto; margin-bottom: auto;"
            title="ROI combines the appreciation of the vault with its $BADGER or $DIGG emissions. All numbers are an approximation based on historical data."
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177"
              role="button"
              tabindex="0"
            >
              YEAR
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-166"
              tabindex="-1"
              value="year"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-214"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <div
            class="MuiInputBase-root-182 MuiOutlinedInput-root-167 makeStyles-currencyPicker-297"
            style="margin-top: auto; margin-bottom: auto;"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177"
              role="button"
              tabindex="0"
            >
              USD
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput-166"
              tabindex="-1"
              value="usd"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-214"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-md-4-85"
      >
        <div
          class="MuiPaper-root-299 makeStyles-infoPaper-298 MuiPaper-elevation2-304 MuiPaper-rounded-300"
        >
          <h6
            class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextPrimary-150"
          >
            Total Value Locked
          </h6>
          <span
            class="MuiSkeleton-root-327 MuiSkeleton-text-328 MuiSkeleton-withChildren-335 MuiSkeleton-fitContent-336 MuiSkeleton-heightAuto-337 MuiSkeleton-wave-333"
          >
            <h5
              class="MuiTypography-root-125 MuiTypography-h5-134"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-md-4-85"
      >
        <div
          class="MuiPaper-root-299 makeStyles-infoPaper-298 MuiPaper-elevation2-304 MuiPaper-rounded-300"
        >
          <h6
            class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextPrimary-150"
          >
            Your Portfolio
          </h6>
          <span
            class="MuiSkeleton-root-327 MuiSkeleton-text-328 MuiSkeleton-withChildren-335 MuiSkeleton-fitContent-336 MuiSkeleton-heightAuto-337 MuiSkeleton-wave-333"
          >
            <h5
              class="MuiTypography-root-125 MuiTypography-h5-134"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-md-4-85"
      >
        <div
          class="MuiPaper-root-299 makeStyles-infoPaper-298 MuiPaper-elevation2-304 MuiPaper-rounded-300"
        >
          <h6
            class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextPrimary-150"
          >
            Badger Price
          </h6>
          <span
            class="MuiSkeleton-root-327 MuiSkeleton-text-328 MuiSkeleton-withChildren-335 MuiSkeleton-fitContent-336 MuiSkeleton-heightAuto-337 MuiSkeleton-wave-333"
          >
            <h5
              class="MuiTypography-root-125 MuiTypography-h5-134"
            >
              Placeholder
            </h5>
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42 MuiGrid-justify-xs-center-37"
    >
      <button
        class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-outlined-226 makeStyles-announcementButton-10 MuiButton-outlinedPrimary-227 MuiButton-outlinedSizeSmall-238 MuiButton-sizeSmall-242"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-222"
        >
          Note: New Vaults may take up to 2 weeks from launch to reach full efficiency.
        </span>
        <span
          class="MuiTouchRipple-root-356"
        />
      </button>
    </div>
    <div
      class="makeStyles-settListContainer-338"
    >
      <div
        class="makeStyles-loaderContainer-339"
      >
        <div
          class="MuiCircularProgress-root-341 MuiCircularProgress-colorPrimary-345 MuiCircularProgress-indeterminate-343"
          role="progressbar"
          style="width: 60px; height: 60px;"
        >
          <svg
            class="MuiCircularProgress-svg-347"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-348 MuiCircularProgress-circleIndeterminate-350"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
        <p
          class="MuiTypography-root-125 makeStyles-loaderMessage-340 MuiTypography-body1-127"
        >
          Loading Ethereum Setts...
        </p>
      </div>
      <div />
    </div>
  </div>
</div>
`;
